Fix overflow styling bug.
When the scroll bar pops into the author groups it changes the width
of the author-group div, throwing the form styling out of wack.

--- a/app/assets/stylesheets/overlays/authors_overlay.css.scss
+++ b/app/assets/stylesheets/overlays/authors_overlay.css.scss
@@ -3,6 +3,9 @@
   padding-left: 0;
   overflow: auto;
 
+  .author-group {
+    width: 920px;
+  }
   .author-drop-target {
     height: 5px;
     margin-bottom: 5px;
